# mcp-watermelon

./: .dockerignore  .env.example  .gitignore  API_IMPROVEMENTS.md  CHANGELOG.md  Dockerfile  GAP_ANALYSIS.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/agent-memory/security-auditor/: MEMORY.md  project_security_audit.md
.claude/agent-memory/ux-auditor/: MEMORY.md  project_watermelon_mcp_ux.md
.github/: dependabot.yml
openspec/changes/migrate-to-python-fastmcp/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-python-fastmcp/specs/contact-tools/: spec.md
openspec/changes/migrate-to-python-fastmcp/specs/conversation-tools/: spec.md
openspec/changes/migrate-to-python-fastmcp/specs/field-tools/: spec.md
openspec/changes/migrate-to-python-fastmcp/specs/message-tools/: spec.md
openspec/changes/migrate-to-python-fastmcp/specs/python-server/: spec.md
openspec/changes/migrate-to-python-fastmcp/specs/watermelon-client/: spec.md
openspec/changes/migrate-to-python-fastmcp/specs/webhook-tools/: spec.md
openspec/changes/watermelon-mcp-server/: design.md  proposal.md  tasks.md
src/: client.ts  index.ts
src/mcp_watermelon/: __init__.py  __main__.py  server.py  settings.py  tools_contacts.py  tools_conversations.py  tools_fields.py  tools_messages.py  tools_webhooks.py
src/tools/: contacts.ts  conversations.ts  fields.ts  messages.ts  webhooks.ts
src/watermelon_mcp/: auth.py  client.py  server.py  settings.py  tools_contacts.py  tools_conversations.py  tools_fields.py  tools_messages.py  tools_webhooks.py
tests/: conftest.py  test_e2e_contacts.py  test_e2e_conversations.py  test_e2e_fields.py  test_e2e_server.py  test_e2e_webhooks.py
(+7 files in other folders)
