[project]
name = "mcp-watermelon"
version = "0.2.4"
description = "MCP server for the Watermelon.ai customer support platform API"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = [
    "mcp",
    "watermelon",
    "customer-support",
    "fastmcp>=3.2.4",
]
dependencies = [
    "fastmcp>=3.2.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_watermelon"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_watermelon",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[project.scripts]
mcp-watermelon = "mcp_watermelon.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.0",
]
